Compiler whack-a-mole. Fixed all compile time errors for DB migration. Functionaly is still lacking, but at least it compiles. #83

--- a/app/views/admin/admindatashare.scala.html
+++ b/app/views/admin/admindatashare.scala.html
@@ -52,7 +52,7 @@ Copyright 2013 Anthony Christe
                 No
               }
             </td>
-            <td>@opqDevice.getGridId</td>
+            <td>@opqDevice.getLocation.getGridId</td>
             <td>
               <a href="@routes.Administration.editDataSharing(opqDevice.getDeviceId)" class="btn btn-warning pull-right">
                 Update
