--- a/app/views/privatemonitoring/eventdetails.scala.html
+++ b/app/views/privatemonitoring/eventdetails.scala.html
@@ -17,7 +17,7 @@ along with opq-ao. If not, see <http://www.gnu.org/licenses/>.
 Copyright 2013 Anthony Christe
 *@
 
-@(event: Event, externalEventForm: Form[ExternalCause], rawPowerData: String)
+@(event: Event, rawPowerData: String)
 
 @import helper._
   @implicitFieldConstructor = @{
@@ -33,55 +33,30 @@ Copyright 2013 Anthony Christe
       <thead>
         <tr>
           <th>Device Id</th>
+          <th>Device Key</th>
           <th>Description</th>
           <th>Event Type</th>
           <th>Timestamp</th>
           <th>Duration (ms)</th>
-          <th>Event Value</th>
+          <th>Frequency (Hz)</th>
+          <th>Voltage (V)</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>@event.getDevice.getDeviceId</td>
-          <td>@event.getDevice.getDescription</td>
+          <td>@event.getKey.getDeviceId</td>
+          <td>@event.getKey.getOpqDevice.getDescription</td>
           <td>@event.getEventType.getName</td>
           <td>@utils.DateUtils.toDateTime(event.getTimestamp)</td>
-          <td>@event.getEventDuration</td>
-          <td>
-            @event.getEventValue
-            @if(event.getEventType.equals(org.openpowerquality.protocol.OpqPacket.PacketType.EVENT_FREQUENCY)) {
-              Hz
-            }
-            @if(event.getEventType.equals(org.openpowerquality.protocol.OpqPacket.PacketType.EVENT_VOLTAGE)) {
-              Volts
-            }
-          </td>
+          <td>@event.getDuration</td>
+          <td>@event.getFrequency</td>
+          <td>@event.getVoltage</td>
         </tr>
       </tbody>
     </table>
   </div>
-  <div class="span9">
-    <p><b>External Cause</b></p>
-    @if(flash.contains("updated")) {
-      <p class="success">
-      @flash.get("updated")
-      </p>
-    }
-    @form(routes.Events.updateEventDetails(event.getPrimaryKey), 'class -> "form-horizontal well well-small", 'name -> "externalCauseForm") {
-      @inputText(
-        externalEventForm("causeType"), '_label -> "Event Type", 'placeholder -> "Tropical Storm Flossie", 'id -> "causeType")
-      @textarea(
-        externalEventForm("causeDescription"), '_label -> "Event Description", 'placeholder -> "Tropical Storm Flossie",
-        'id -> "causeDescription")
-      <div class="control-group">
-        <div class="controls">
-          <input type="submit" class="btn btn-primary" value="Update External Cause" />
-        </div>
-      </div>
-    }
-
-  </div>
-
+  @* TODO: Re-enable charts *@
+  @*
   <!-- ITIC Curve - Should only be displayed on voltage events -->
   @if(event.getEventType.equals(org.openpowerquality.protocol.OpqPacket.PacketType.EVENT_VOLTAGE)) {
     <div class="row">
@@ -115,7 +90,7 @@ Copyright 2013 Anthony Christe
     var max = Math.max.apply(null, splitData);
     var min = Math.min.apply(null, splitData);
     for(var i = 0; i < splitData.length; i++) {
-        points[0].push([i, splitData[i]]);
+        points[0].push([i, @rawPowerData.]);
     }
 
     //var standardLinePositive = [[0, rmsStandard], [points[0].length, rmsStandard]];
@@ -158,7 +133,7 @@ Copyright 2013 Anthony Christe
     @if(event.getEventType.equals(org.openpowerquality.protocol.OpqPacket.PacketType.EVENT_VOLTAGE)) {
       var p = iticPlotter;
       p.init("#itic-plot");
-      p.addPoint(@event.getEventDuration, p.voltageToPercentNominalVoltage(@event.getEventValue));
+      p.addPoint(@event.getDuration, p.voltageToPercentNominalVoltage(@event.getVoltage));
 
       $("<div id='tooltip'></div>").css({
         position: "absolute",
@@ -189,4 +164,5 @@ Copyright 2013 Anthony Christe
     }
 
   </script>
+  *@
 }
