--- a/app/views/wizard/wizard_user_info.scala.html
+++ b/app/views/wizard/wizard_user_info.scala.html
@@ -31,21 +31,14 @@ Copyright 2013 Anthony Christe
       @inputText(personForm("lastName"), '_label -> "Last Name", 'placeholder -> "Doe", 'id -> "lastName")
       @inputText(personForm("email"), '_label -> "E-Mail", 'placeholder -> "john.doe@email.com", 'id -> "email")
       @inputPassword(personForm("password"), '_label -> "Password", 'placeholder -> "Password", 'id -> "password")
-      @select(
-        personForm("state"),
-        options = options(utils.FormUtils.LIST_OF_STATES),
-        '_label -> "State",
-        '_default -> "--- Select State ---",
-        'id -> "personState")
+
     </div>
     <div class="span3">
       <div class="well well-small">
         <p class="bold">Welcome to the OPQ Wizard</p>
         <p>
-        This wizard will walk you through the steps needed to
-          create an account and also register your OPQ device. You can go back to any step
-          at any time and all of this information can be updated in the future from the
-          administration panel.
+          This wizard will walk you through the steps needed to
+          create an account and also register OPQ decices.
         </p>
         <p class="bold">User Information</p>
         <p>
