Working sign-up. For now, had to remove the wizard. #83

--- a/app/views/privatemonitoring/eventdetails.scala.html
+++ b/app/views/privatemonitoring/eventdetails.scala.html
@@ -44,8 +44,8 @@ Copyright 2013 Anthony Christe
       </thead>
       <tbody>
         <tr>
-          <td>@event.getKey.getDeviceId</td>
-          <td>@event.getKey.getOpqDevice.getDescription</td>
+          <td>@event.getAccessKey.getDeviceId</td>
+          <td>@event.getAccessKey.getOpqDevice.getDescription</td>
           <td>@event.getEventType.getName</td>
           <td>@utils.DateUtils.toDateTime(event.getTimestamp)</td>
           <td>@event.getDuration</td>
