--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -19,16 +19,16 @@ Copyright 2013 Anthony Christe
 
 @(notLoggedIn: Boolean)
 
-@main("Getting Started with OPQ", menu("Getting Started with OPQ", notLoggedIn)) {
+@main("OPQHub Home", menu("Getting Started with OPQ", notLoggedIn)) {
 
   <div class="container">
     <div class="hero-unit hidden-phone">
-      <h1 class="hero-font">Welcome to Open Power Quality</h1>
+      <h1 class="hero-font">Welcome to OPQHub</h1>
       <p class="hero-font">To get started, select one of the two options below.</p>
       @if(notLoggedIn) {
         <p>
-          <a class="btn btn-large btn-success" href="@routes.Wizard.index()"><span class="btn-label">
-            Set Up Device</span></a>
+          <a class="btn btn-large btn-success" href="@routes.Person.signup()"><span class="btn-label">
+            Sign-Up</span></a>
           <a class="btn btn-large btn-primary" href="@routes.Application.login()"><span class="btn-label">Login</span></a>
         </p>
       }
