--- a/app/views/menu.scala.html
+++ b/app/views/menu.scala.html
@@ -32,11 +32,10 @@ Copyright 2013 Anthony Christe
   <div class="navbar">
     <div class="navbar-inner">
       <div class="container">
-        <a class="brand" href="#">Open Power Quality</a>
+        <a class="brand" href="@routes.Application.index()">OPQHub</a>
         <div class="navbar-content">
           <ul class="nav">
           @if(publicMenu) {
-            @createMenuItem("Getting Started", "getting started with opq", routes.Application.index())
             @createMenuItem("Public Power Quality Monitoring", "power quality monitoring",
               routes.PowerQualityMonitoring.publicMonitor())
           } else {
