--- a/app/views/admin/deviceconfig.scala.html
+++ b/app/views/admin/deviceconfig.scala.html
@@ -17,7 +17,7 @@ along with opq-ao. If not, see <http://www.gnu.org/licenses/>.
 Copyright 2013 Anthony Christe
 *@
 
-@(deviceId: Long, accessKey: String, deviceForm: Form[OpqDevice])
+@(deviceId: Long, accessKey: String, deviceForm: Form[OpqDevice], locationForm: Form[Location])
 
 @import helper._
   @implicitFieldConstructor = @{
@@ -33,26 +33,47 @@ Copyright 2013 Anthony Christe
         <tr>
           <th>Device Id</th>
           <th>Key</th>
+          <th>Location</th>
           <th>Description</th>
-          <th>Sharing Data Publicly</th>
+          <th>Make Data Public</th>
+
           <th></th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>@deviceId</td>
-          <td>@accessKey</td>
-          @form(routes.Administration.device(), 'class -> "form-inline") {
+
+          @form(routes.Administration.saveDeviceConfiguration(), 'class -> "form-inline") {
+            <input type="hidden" id="northEastLatitude" name="northEastLatitude" />
+            <input type="hidden" id="northEastLongitude" name="northEastLongitude" />
+            <input type="hidden" id="southWestLatitude" name="southWestLatitude" />
+            <input type="hidden" id="southWestLongitude" name="southWestLongitude" />
+            <input type="hidden" id="gridScale" name="gridScale" />
+            <input type="hidden" id="gridRow" name="gridRow" />
+            <input type="hidden" id="gridCol" name="gridCol" />
+            <td>
+              @inputText(deviceForm("deviceId"), '_showConstraints -> false, '_label -> "",
+                'class -> "input-small", 'readonly -> "readonly")
+            </td>
+            <td>
+              @inputText(deviceForm("accessKey.accessKey"), '_showConstraints -> false, '_label -> "",
+                'class -> "input-small", 'readonly -> "readonly")
+            </td>
+            <td>
+            @inputText(locationForm("gridId"), '_showConstraints -> false, '_label -> "",
+              'class -> "input-medium", 'readonly -> "readonly", 'id -> "gridId")
+            </td>
             <td>@inputText(deviceForm("description"), '_showConstraints -> false, '_label -> "",
               'class -> "input-medium")</td>
-            <td>@inputText(deviceForm("accessKey"), '_showConstraints -> false, '_label -> "", 'readonly -> "readonly",
-              'class -> "")</td>
+            <td>@checkbox(deviceForm("sharingData"), '_showConstraints -> false, '_label -> "")</td>
+            <input type="hidden" name="sharingData" id="sharingData" value="false" />
             <td>
               <input type="submit" class="btn btn-warning pull-right" value="Update">
             </td>    }
         </tr>
       </tbody>
     </table>
+    <div id="grid-map" style="height:500px"></div>
   </div>
   <div class="span2 well well-small">
     <p>
@@ -66,4 +87,39 @@ Copyright 2013 Anthony Christe
       the key to their OPQBox.
     </p>
   </div>
+
+
+  @* Device Map *@
+  <script src="@routes.Assets.at("javascripts/leaflet.js")" type="text/javascript"></script>
+  <script src="@routes.Assets.at("javascripts/grid-map.js")" type="text/javascript"></script>
+
+  <script type="text/javascript">
+  addDynamicCss ( '  @routes.Assets.at("stylesheets/leaflet.css") ');
+
+  function onGridClick(feature, layer) {
+    $(function () {
+      $('#gridId').val(feature.properties.id);
+      $('#northEastLatitude').val(feature.properties.boundingBox.getNorthEast().lat);
+      $('#northEastLongitude').val(feature.properties.boundingBox.getNorthEast().lng);
+      $('#southWestLatitude').val(feature.properties.boundingBox.getSouthWest().lat);
+      $('#southWestLongitude').val(feature.properties.boundingBox.getSouthWest().lng);
+      $('#gridScale').val(feature.properties.scale);
+      $('#gridRow').val(feature.properties.row);
+      $('#gridCol').val(feature.properties.col);
+    });
+
+    g.colorSquare(feature.properties.id, "red");
+  }
+
+  var g = grid;
+  g.config.singleSelectionMode = true;
+  g.callbacks.onGridClick = onGridClick;
+  g.initMap("grid-map", g.island.OAHU.latLng, g.island.OAHU.defaultZoom);
+
+  $(document).ready(function() {
+    $('#opq-wizard').on('changed', function(e, data) {
+      g.invalidateSize();
+    });
+  });
+  </script>
 }
