Updated color of button to match other buttons.

--- a/app/views/admin/admindevice.scala.html
+++ b/app/views/admin/admindevice.scala.html
@@ -51,7 +51,7 @@ Copyright 2013 Anthony Christe
               <td>@key.getDeviceId()</td>
               <td>@key.getAccessKey()</td>
               <td>
-                <a href="@routes.Administration.configureDevice(key.getDeviceId, key.getAccessKey)" class="btn btn-success pull-right">Configure Device</a>
+                <a href="@routes.Administration.configureDevice(key.getDeviceId, key.getAccessKey)" class="btn btn-warning pull-right">Configure Device</a>
               </td>
             </tr>
           }
