--- a/app/views/privatemonitoring/privateevents.scala.html
+++ b/app/views/privatemonitoring/privateevents.scala.html
@@ -71,7 +71,7 @@ Copyright 2013 Anthony Christe
         <tbody>
         @for(event <- events) {
           <tr>
-            <td>@event.getAccessKey.getOpqDevice.getDeviceId</td>
+            <td>@event.getAccessKey.getDeviceId</td>
             <td>@event.getAccessKey.getOpqDevice.getDescription</td>
             <td>@event.getEventType.getName</td>
             <td>@utils.DateUtils.toDateTime(event.getTimestamp)</td>
@@ -86,7 +86,7 @@ Copyright 2013 Anthony Christe
         </tbody>
       </table>
     </div>
-    <div class="pull-right">
+    @*<div class="pull-right">
       @defining(
         if(session.get("eventsAfterAmount") == null) {
           0L
@@ -100,6 +100,6 @@ Copyright 2013 Anthony Christe
         [@(page + 1)/@(pages + 1)]
       <a href="@routes.Events.eventsByPage(page + 1, afterTimestamp)" class="btn btn-primary"> Next. -></a>
       }
-    </div>
+    </div>*@
   </div>
 }
